typescript/checker/tests/conformance/expressions/unaryOperators/negateOperator/negateOperatorWithBooleanType.ts.stderr
error: UselessSeqExpr {
    span: Span {
        lo: BytePos(
            584,
        ),
        hi: BytePos(
            596,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/unaryOperators/negateOperator/negateOperatorWithBooleanType.ts:33:1
   |
33 | -true, false;
   | ^^^^^^^^^^^^

